--- a/API_Handle/style.css
+++ b/API_Handle/style.css
@@ -43,3 +43,15 @@ body {
 #age {
   font-weight: 100;
 }
+.btn {
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 600;
+  outline: none;
+  border: none;
+  border-radius: 6px;
+  padding: 5px 10px;
+}
+.btn:hover {
+  transform: scale(1.1);
+}
