--- a/Projects/project1/style.css
+++ b/Projects/project1/style.css
@@ -9,3 +9,11 @@ span {
   width: 80%;
   text-align: center;
 }
+.button {
+  width: 100px;
+  height: 100px;
+  border: solid rgb(95, 91, 91) 0.5px;
+  display: inline-block;
+  border-radius: 14px;
+  transition: transform 1s ease;
+}
