--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -1,1 +1,7 @@
-
+body {
+  display: flex;
+  justify-content: center; /* horizontally center */
+  align-items: center; /* vertically center */
+  height: 100vh; /* to make the body full height of the viewport */
+  margin: 0; /* remove default margin */
+}
