--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -8,3 +8,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 575px;
+  height: 825px;
