--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -18,3 +18,9 @@ body {
 #weight-guide {
   margin-top: 25px;
 }
+#results {
+  font-size: 35px;
+  margin-left: 90px;
+  margin-top: 20px;
+  color: rgb(241, 241, 241);
+}
