--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -24,3 +24,9 @@ body {
   margin-top: 20px;
   color: rgb(241, 241, 241);
 }
+
+button {
+  margin-top: 25px;
+  padding: 10px;
+  border-radius: 8px;
+  color: white;
