--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -40,3 +40,9 @@ button {
 button:hover {
   transform: scale(0.96);
 }
+.CM,
+.KG {
+  font-size: 25px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
