--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -46,3 +46,14 @@ button:hover {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+.input_CM {
+  width: 200px;
+  height: 30px;
+  border: none;
+  outline: none;
+  border-radius: 7px;
+  font-size: 25px;
+  color: rgb(1, 152, 253);
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  padding: 10px;
+}
