--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -68,3 +68,11 @@ button:hover {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   padding: 10px;
 }
+.guide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
+}
