--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -97,3 +97,6 @@ button:hover {
   margin-top: 70px;
   animation: blink 5s infinite; /* Change '2s' to adjust the speed */
 }
+.res {
+  font-size: 35px;
+  margin-top: -46px;
