--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -105,3 +105,7 @@ button:hover {
 #results {
   font-size: 35px;
   margin-top: -74px;
+  margin-left: 50px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: #026115;
+}
