--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -109,3 +109,6 @@ button:hover {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: #026115;
 }
+h1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 50px;
