--- a/Projects/project2/style.css
+++ b/Projects/project2/style.css
@@ -112,3 +112,6 @@ button:hover {
 h1 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 50px;
+  color: rgb(255, 102, 0);
+  border: solid 5px #4030a7;
+  border-radius: 20px;
